--- a/archives/toutiao-search/2023-10-28.md
+++ b/archives/toutiao-search/2023-10-28.md
@@ -1,9 +1,9 @@
 # 2023-10-28
 
-共 74 条
+共 82 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Oct 28 2023 03:00:42 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Oct 28 2023 04:00:49 GMT+0800 (China Standard Time) -->
 1. [李克强同志讣告发布](https://so.toutiao.com/search?keyword=李克强同志讣告发布)
 1. [李克强同志遗像发布](https://so.toutiao.com/search?keyword=李克强同志遗像发布)
 1. [神十七乘组进行航天技术试验亮点](https://so.toutiao.com/search?keyword=神十七乘组进行航天技术试验亮点)
@@ -11,45 +11,54 @@
 1. [吴尊友因胰腺癌去世](https://so.toutiao.com/search?keyword=吴尊友因胰腺癌去世)
 1. [李克强同志逝世](https://so.toutiao.com/search?keyword=李克强同志逝世)
 1. [印度军队向巴基斯坦开火](https://so.toutiao.com/search?keyword=印度军队向巴基斯坦开火)
-1. [学历和技能哪个对学生更重要](https://so.toutiao.com/search?keyword=学历和技能哪个对学生更重要)
-1. [国家医保局辟谣取消个人医保账户](https://so.toutiao.com/search?keyword=国家医保局辟谣取消个人医保账户)
 1. [疑强迫妇女发生关系村支书已停职](https://so.toutiao.com/search?keyword=疑强迫妇女发生关系村支书已停职)
-1. [吴尊友曾回应三年白头：不算什么](https://so.toutiao.com/search?keyword=吴尊友曾回应三年白头：不算什么)
+1. [国家医保局辟谣取消个人医保账户](https://so.toutiao.com/search?keyword=国家医保局辟谣取消个人医保账户)
 1. [女生花2小时面试3轮一问工资1900](https://so.toutiao.com/search?keyword=女生花2小时面试3轮一问工资1900)
-1. [极氪001 FR上市 零售价76.9万起](https://so.toutiao.com/search?keyword=极氪001+FR上市 零售价76.9万起)
+1. [吴尊友曾回应三年白头：不算什么](https://so.toutiao.com/search?keyword=吴尊友曾回应三年白头：不算什么)
 1. [30岁女子一天5杯咖啡喝成脆骨人](https://so.toutiao.com/search?keyword=30岁女子一天5杯咖啡喝成脆骨人)
-1. [高福：吴尊友是真正的流行病学家](https://so.toutiao.com/search?keyword=高福：吴尊友是真正的流行病学家)
-1. [看完李佳琦直播京东采销再降1500元](https://so.toutiao.com/search?keyword=看完李佳琦直播京东采销再降1500元)
-1. [医生：这些人不可摄入大量咖啡](https://so.toutiao.com/search?keyword=医生：这些人不可摄入大量咖啡)
+1. [学历和技能哪个对学生更重要](https://so.toutiao.com/search?keyword=学历和技能哪个对学生更重要)
 1. [央视报道员的家遭以军空袭](https://so.toutiao.com/search?keyword=央视报道员的家遭以军空袭)
-1. [俄方用什么武器5天击落24架乌军机](https://so.toutiao.com/search?keyword=俄方用什么武器5天击落24架乌军机)
-1. [江苏一地收的“人口费”是个什么费](https://so.toutiao.com/search?keyword=江苏一地收的“人口费”是个什么费)
-1. [女子团建时被组员轮流用水淋头](https://so.toutiao.com/search?keyword=女子团建时被组员轮流用水淋头)
-1. [元稹之妻裴淑墓葬在陕西被发现](https://so.toutiao.com/search?keyword=元稹之妻裴淑墓葬在陕西被发现)
-1. [拾荒男子PUA上海7旬老太骗得82万](https://so.toutiao.com/search?keyword=拾荒男子PUA上海7旬老太骗得82万)
-1. [苏炳添世界排名消失](https://so.toutiao.com/search?keyword=苏炳添世界排名消失)
-1. [消防员为救人智力退至3岁 妻子发声](https://so.toutiao.com/search?keyword=消防员为救人智力退至3岁+妻子发声)
-1. [极兔李杰：不后悔进入中国市场](https://so.toutiao.com/search?keyword=极兔李杰：不后悔进入中国市场)
+1. [医生：这些人不可摄入大量咖啡](https://so.toutiao.com/search?keyword=医生：这些人不可摄入大量咖啡)
+1. [极氪001 FR上市 零售价76.9万起](https://so.toutiao.com/search?keyword=极氪001+FR上市 零售价76.9万起)
+1. [成都春熙路一男子当街拦车被撞身亡](https://so.toutiao.com/search?keyword=成都春熙路一男子当街拦车被撞身亡)
+1. [看完李佳琦直播京东采销再降1500元](https://so.toutiao.com/search?keyword=看完李佳琦直播京东采销再降1500元)
+1. [高福：吴尊友是真正的流行病学家](https://so.toutiao.com/search?keyword=高福：吴尊友是真正的流行病学家)
+1. [华为申请超充绿廊商标](https://so.toutiao.com/search?keyword=华为申请超充绿廊商标)
+1. [曝45岁男子炒股欠贷百万爆仓销户](https://so.toutiao.com/search?keyword=曝45岁男子炒股欠贷百万爆仓销户)
 1. [烈士陵园树枝掰开竟是五角星图案](https://so.toutiao.com/search?keyword=烈士陵园树枝掰开竟是五角星图案)
+1. [首次中药配方颗粒省际联盟集采开标](https://so.toutiao.com/search?keyword=首次中药配方颗粒省际联盟集采开标)
+1. [女子团建时被组员轮流用水淋头](https://so.toutiao.com/search?keyword=女子团建时被组员轮流用水淋头)
+1. [江苏一地收的“人口费”是个什么费](https://so.toutiao.com/search?keyword=江苏一地收的“人口费”是个什么费)
+1. [苏炳添世界排名消失](https://so.toutiao.com/search?keyword=苏炳添世界排名消失)
+1. [元稹之妻裴淑墓葬在陕西被发现](https://so.toutiao.com/search?keyword=元稹之妻裴淑墓葬在陕西被发现)
+1. [俄方用什么武器5天击落24架乌军机](https://so.toutiao.com/search?keyword=俄方用什么武器5天击落24架乌军机)
+1. [张雪峰公司2月放18天假只上7天班](https://so.toutiao.com/search?keyword=张雪峰公司2月放18天假只上7天班)
+1. [幼儿园防暴演练厨师抄锅铲追进教室](https://so.toutiao.com/search?keyword=幼儿园防暴演练厨师抄锅铲追进教室)
+1. [公司回应员工痛哭往他人头上浇水](https://so.toutiao.com/search?keyword=公司回应员工痛哭往他人头上浇水)
+1. [法媒震惊中国队赢了面包“世界杯”](https://so.toutiao.com/search?keyword=法媒震惊中国队赢了面包“世界杯”)
+1. [媒体谈赖清德支持度一路下跌](https://so.toutiao.com/search?keyword=媒体谈赖清德支持度一路下跌)
+1. [拾荒男子PUA上海7旬老太骗得82万](https://so.toutiao.com/search?keyword=拾荒男子PUA上海7旬老太骗得82万)
+1. [小伙自掏腰包53万帮村里修路](https://so.toutiao.com/search?keyword=小伙自掏腰包53万帮村里修路)
+1. [极兔李杰：不后悔进入中国市场](https://so.toutiao.com/search?keyword=极兔李杰：不后悔进入中国市场)
+1. [机票燃油附加费回落](https://so.toutiao.com/search?keyword=机票燃油附加费回落)
+1. [面粉中含滑石粉？官方抽检结果出炉](https://so.toutiao.com/search?keyword=面粉中含滑石粉？官方抽检结果出炉)
+1. [丰田章男称业界不应全力投入电动车](https://so.toutiao.com/search?keyword=丰田章男称业界不应全力投入电动车)
+1. [除夕免收通行费以驶离出口时间为准](https://so.toutiao.com/search?keyword=除夕免收通行费以驶离出口时间为准)
+1. [安徽一70后厅级干部被查](https://so.toutiao.com/search?keyword=安徽一70后厅级干部被查)
+1. [iPhone 15提前降价导致销量锐减](https://so.toutiao.com/search?keyword=iPhone+15提前降价导致销量锐减)
+1. [iQOO 12外观官图公布](https://so.toutiao.com/search?keyword=iQOO+12外观官图公布)
+1. [农行存量房贷利率平均下调73个基点](https://so.toutiao.com/search?keyword=农行存量房贷利率平均下调73个基点)
+1. [邻桌模仿聋哑人称其哑巴双方起冲突](https://so.toutiao.com/search?keyword=邻桌模仿聋哑人称其哑巴双方起冲突)
+1. [研究：过量“美拉德”会加速衰老](https://so.toutiao.com/search?keyword=研究：过量“美拉德”会加速衰老)
+1. [为什么现在没年味了](https://so.toutiao.com/search?keyword=为什么现在没年味了)
+1. [台媒：两岸贸易不好台湾经济不会好](https://so.toutiao.com/search?keyword=台媒：两岸贸易不好台湾经济不会好)
+1. [台媒体人曝赖清德未处理郑文灿原因](https://so.toutiao.com/search?keyword=台媒体人曝赖清德未处理郑文灿原因)
+1. [消防员为救人智力退至3岁 妻子发声](https://so.toutiao.com/search?keyword=消防员为救人智力退至3岁+妻子发声)
 1. [比亚迪新能源车亮相东京车展引关注](https://so.toutiao.com/search?keyword=比亚迪新能源车亮相东京车展引关注)
 1. [中专生称被学校强制送去厂里拧螺丝](https://so.toutiao.com/search?keyword=中专生称被学校强制送去厂里拧螺丝)
-1. [幼儿园防暴演练厨师抄锅铲追进教室](https://so.toutiao.com/search?keyword=幼儿园防暴演练厨师抄锅铲追进教室)
-1. [法媒震惊中国队赢了面包“世界杯”](https://so.toutiao.com/search?keyword=法媒震惊中国队赢了面包“世界杯”)
-1. [丰田章男称业界不应全力投入电动车](https://so.toutiao.com/search?keyword=丰田章男称业界不应全力投入电动车)
-1. [张雪峰公司2月放18天假只上7天班](https://so.toutiao.com/search?keyword=张雪峰公司2月放18天假只上7天班)
 1. [李佳琦团队招舆情公关](https://so.toutiao.com/search?keyword=李佳琦团队招舆情公关)
-1. [小伙自掏腰包53万帮村里修路](https://so.toutiao.com/search?keyword=小伙自掏腰包53万帮村里修路)
-1. [成都春熙路一男子当街拦车被撞身亡](https://so.toutiao.com/search?keyword=成都春熙路一男子当街拦车被撞身亡)
-1. [iPhone 15提前降价导致销量锐减](https://so.toutiao.com/search?keyword=iPhone+15提前降价导致销量锐减)
 1. [广西一野生景点登山游客密密麻麻](https://so.toutiao.com/search?keyword=广西一野生景点登山游客密密麻麻)
-1. [公司回应员工痛哭往他人头上浇水](https://so.toutiao.com/search?keyword=公司回应员工痛哭往他人头上浇水)
-1. [除夕免收通行费以驶离出口时间为准](https://so.toutiao.com/search?keyword=除夕免收通行费以驶离出口时间为准)
 1. [个人养老金账户“空户”难题待解](https://so.toutiao.com/search?keyword=个人养老金账户“空户”难题待解)
-1. [农行存量房贷利率平均下调73个基点](https://so.toutiao.com/search?keyword=农行存量房贷利率平均下调73个基点)
-1. [机票燃油附加费回落](https://so.toutiao.com/search?keyword=机票燃油附加费回落)
-1. [安徽一70后厅级干部被查](https://so.toutiao.com/search?keyword=安徽一70后厅级干部被查)
-1. [邻桌模仿聋哑人称其哑巴双方起冲突](https://so.toutiao.com/search?keyword=邻桌模仿聋哑人称其哑巴双方起冲突)
-1. [台媒：两岸贸易不好台湾经济不会好](https://so.toutiao.com/search?keyword=台媒：两岸贸易不好台湾经济不会好)
 1. [赖岳谦：美国的停火草案玩文字游戏](https://so.toutiao.com/search?keyword=赖岳谦：美国的停火草案玩文字游戏)
 1. [14岁男孩吃完未熟透烤全羊后肝衰竭](https://so.toutiao.com/search?keyword=14岁男孩吃完未熟透烤全羊后肝衰竭)
 1. [中方回应是否计划同哈马斯接触](https://so.toutiao.com/search?keyword=中方回应是否计划同哈马斯接触)
@@ -65,7 +74,6 @@
 1. [疑似魔兽世界11.0资料片截图泄露](https://so.toutiao.com/search?keyword=疑似魔兽世界11.0资料片截图泄露)
 1. [董宇辉：双十一要理性消费](https://so.toutiao.com/search?keyword=董宇辉：双十一要理性消费)
 1. [记者深入以军集结点发现坦克增多](https://so.toutiao.com/search?keyword=记者深入以军集结点发现坦克增多)
-1. [研究：过量“美拉德”会加速衰老](https://so.toutiao.com/search?keyword=研究：过量“美拉德”会加速衰老)
 1. [孙子将老人4万看病钱换成假币](https://so.toutiao.com/search?keyword=孙子将老人4万看病钱换成假币)
 1. [这22款APP涉嫌侵害用户权益](https://so.toutiao.com/search?keyword=这22款APP涉嫌侵害用户权益)
 1. [哈马斯代表团与伊朗副外长在俄会见](https://so.toutiao.com/search?keyword=哈马斯代表团与伊朗副外长在俄会见)
