--- a/archives/toutiao-search/2023-10-28.md
+++ b/archives/toutiao-search/2023-10-28.md
@@ -1,55 +1,78 @@
 # 2023-10-28
 
-共 95 条
+共 114 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Oct 28 2023 07:00:37 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Oct 28 2023 08:22:55 GMT+0800 (China Standard Time) -->
 1. [李克强同志讣告发布](https://so.toutiao.com/search?keyword=李克强同志讣告发布)
 1. [李克强同志遗像发布](https://so.toutiao.com/search?keyword=李克强同志遗像发布)
 1. [神十七乘组进行航天技术试验亮点](https://so.toutiao.com/search?keyword=神十七乘组进行航天技术试验亮点)
-1. [巴以冲突已致双方超8800人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致双方超8800人死亡)
-1. [吴尊友因胰腺癌去世](https://so.toutiao.com/search?keyword=吴尊友因胰腺癌去世)
+1. [缅北激战 果敢民族民主同盟军发声](https://so.toutiao.com/search?keyword=缅北激战+果敢民族民主同盟军发声)
+1. [深圳欢乐谷过山车碰撞致8人受伤](https://so.toutiao.com/search?keyword=深圳欢乐谷过山车碰撞致8人受伤)
 1. [李克强同志逝世](https://so.toutiao.com/search?keyword=李克强同志逝世)
-1. [疑强迫妇女发生关系村支书已停职](https://so.toutiao.com/search?keyword=疑强迫妇女发生关系村支书已停职)
-1. [印度军队向巴基斯坦开火](https://so.toutiao.com/search?keyword=印度军队向巴基斯坦开火)
+1. [校方回应运动会学生举日本国旗](https://so.toutiao.com/search?keyword=校方回应运动会学生举日本国旗)
+1. [校长称拒绝领导“自愿”订校服要求](https://so.toutiao.com/search?keyword=校长称拒绝领导“自愿”订校服要求)
 1. [国家医保局辟谣取消个人医保账户](https://so.toutiao.com/search?keyword=国家医保局辟谣取消个人医保账户)
-1. [女生花2小时面试3轮一问工资1900](https://so.toutiao.com/search?keyword=女生花2小时面试3轮一问工资1900)
+1. [吴尊友因胰腺癌去世](https://so.toutiao.com/search?keyword=吴尊友因胰腺癌去世)
+1. [中国和以色列关系到底怎么样](https://so.toutiao.com/search?keyword=中国和以色列关系到底怎么样)
+1. [联合国称以色列哈马斯均犯下战争罪](https://so.toutiao.com/search?keyword=联合国称以色列哈马斯均犯下战争罪)
 1. [吴尊友曾回应三年白头：不算什么](https://so.toutiao.com/search?keyword=吴尊友曾回应三年白头：不算什么)
-1. [看完李佳琦直播京东采销再降1500元](https://so.toutiao.com/search?keyword=看完李佳琦直播京东采销再降1500元)
-1. [极氪001 FR上市 零售价76.9万起](https://so.toutiao.com/search?keyword=极氪001+FR上市 零售价76.9万起)
+1. [吴尊友最后一条微博提醒科学戴口罩](https://so.toutiao.com/search?keyword=吴尊友最后一条微博提醒科学戴口罩)
+1. [印度军队向巴基斯坦开火](https://so.toutiao.com/search?keyword=印度军队向巴基斯坦开火)
 1. [高福：吴尊友是真正的流行病学家](https://so.toutiao.com/search?keyword=高福：吴尊友是真正的流行病学家)
-1. [元稹之妻裴淑墓葬在陕西被发现](https://so.toutiao.com/search?keyword=元稹之妻裴淑墓葬在陕西被发现)
+1. [伊朗2.46米排球巨人上场引惊呼](https://so.toutiao.com/search?keyword=伊朗2.46米排球巨人上场引惊呼)
+1. [女生花2小时面试3轮一问工资1900](https://so.toutiao.com/search?keyword=女生花2小时面试3轮一问工资1900)
+1. [欧盟声明确定巴以问题“共同路线”](https://so.toutiao.com/search?keyword=欧盟声明确定巴以问题“共同路线”)
 1. [学历和技能哪个对学生更重要](https://so.toutiao.com/search?keyword=学历和技能哪个对学生更重要)
-1. [央视报道员的家遭以军空袭](https://so.toutiao.com/search?keyword=央视报道员的家遭以军空袭)
-1. [老人路中间打太极致过往车辆被堵](https://so.toutiao.com/search?keyword=老人路中间打太极致过往车辆被堵)
-1. [安徽一70后厅级干部被查](https://so.toutiao.com/search?keyword=安徽一70后厅级干部被查)
-1. [俄方用什么武器5天击落24架乌军机](https://so.toutiao.com/search?keyword=俄方用什么武器5天击落24架乌军机)
+1. [曝45岁男子炒股欠贷百万爆仓销户](https://so.toutiao.com/search?keyword=曝45岁男子炒股欠贷百万爆仓销户)
+1. [中国船损坏了天然气管道？中方回应](https://so.toutiao.com/search?keyword=中国船损坏了天然气管道？中方回应)
+1. [游客讲述深圳欢乐谷过山车事故](https://so.toutiao.com/search?keyword=游客讲述深圳欢乐谷过山车事故)
+1. [特朗普又曝惊人想法：让美退出北约](https://so.toutiao.com/search?keyword=特朗普又曝惊人想法：让美退出北约)
+1. [极氪001 FR上市 零售价76.9万起](https://so.toutiao.com/search?keyword=极氪001+FR上市 零售价76.9万起)
 1. [江苏一地收的“人口费”是个什么费](https://so.toutiao.com/search?keyword=江苏一地收的“人口费”是个什么费)
+1. [看完李佳琦直播京东采销再降1500元](https://so.toutiao.com/search?keyword=看完李佳琦直播京东采销再降1500元)
+1. [加沙卫生部门公布7000名遇难者名单](https://so.toutiao.com/search?keyword=加沙卫生部门公布7000名遇难者名单)
+1. [明年极氪将推出三款走量新车](https://so.toutiao.com/search?keyword=明年极氪将推出三款走量新车)
+1. [央视报道员的家遭以军空袭](https://so.toutiao.com/search?keyword=央视报道员的家遭以军空袭)
+1. [小伙自掏腰包53万帮村里修路](https://so.toutiao.com/search?keyword=小伙自掏腰包53万帮村里修路)
+1. [元稹之妻裴淑墓葬在陕西被发现](https://so.toutiao.com/search?keyword=元稹之妻裴淑墓葬在陕西被发现)
+1. [赖岳谦：美国的停火草案玩文字游戏](https://so.toutiao.com/search?keyword=赖岳谦：美国的停火草案玩文字游戏)
+1. [11岁男孩玩蛋仔派对10天花掉4万元](https://so.toutiao.com/search?keyword=11岁男孩玩蛋仔派对10天花掉4万元)
+1. [老人路中间打太极致过往车辆被堵](https://so.toutiao.com/search?keyword=老人路中间打太极致过往车辆被堵)
+1. [除夕免收通行费以驶离出口时间为准](https://so.toutiao.com/search?keyword=除夕免收通行费以驶离出口时间为准)
 1. [比亚迪新能源车亮相东京车展引关注](https://so.toutiao.com/search?keyword=比亚迪新能源车亮相东京车展引关注)
-1. [研究：过量“美拉德”会加速衰老](https://so.toutiao.com/search?keyword=研究：过量“美拉德”会加速衰老)
+1. [巴方称以军空袭加沙北部致至少30死](https://so.toutiao.com/search?keyword=巴方称以军空袭加沙北部致至少30死)
+1. [男子因砂石厂污染环境维权被判缓刑](https://so.toutiao.com/search?keyword=男子因砂石厂污染环境维权被判缓刑)
+1. [俄方用什么武器5天击落24架乌军机](https://so.toutiao.com/search?keyword=俄方用什么武器5天击落24架乌军机)
+1. [邻桌模仿聋哑人称其哑巴双方起冲突](https://so.toutiao.com/search?keyword=邻桌模仿聋哑人称其哑巴双方起冲突)
+1. [深圳欢乐谷28日起闭园两天](https://so.toutiao.com/search?keyword=深圳欢乐谷28日起闭园两天)
+1. [安徽一70后厅级干部被查](https://so.toutiao.com/search?keyword=安徽一70后厅级干部被查)
 1. [成都春熙路一男子当街拦车被撞身亡](https://so.toutiao.com/search?keyword=成都春熙路一男子当街拦车被撞身亡)
+1. [烈士陵园树枝掰开竟是五角星图案](https://so.toutiao.com/search?keyword=烈士陵园树枝掰开竟是五角星图案)
+1. [媒体：勿把饭圈那套带到体育比赛](https://so.toutiao.com/search?keyword=媒体：勿把饭圈那套带到体育比赛)
+1. [研究：过量“美拉德”会加速衰老](https://so.toutiao.com/search?keyword=研究：过量“美拉德”会加速衰老)
+1. [中国市场在跨国车企战略中权重如何](https://so.toutiao.com/search?keyword=中国市场在跨国车企战略中权重如何)
+1. [盲人足球中国队提前战决赛对手伊朗](https://so.toutiao.com/search?keyword=盲人足球中国队提前战决赛对手伊朗)
+1. [苏炳添世界排名消失](https://so.toutiao.com/search?keyword=苏炳添世界排名消失)
+1. [巴以冲突已致双方超8800人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致双方超8800人死亡)
+1. [疑强迫妇女发生关系村支书已停职](https://so.toutiao.com/search?keyword=疑强迫妇女发生关系村支书已停职)
 1. [热刺主帅谈对凯恩的看法](https://so.toutiao.com/search?keyword=热刺主帅谈对凯恩的看法)
 1. [幼儿园防暴演练厨师抄锅铲追进教室](https://so.toutiao.com/search?keyword=幼儿园防暴演练厨师抄锅铲追进教室)
 1. [面粉中含滑石粉？官方抽检结果出炉](https://so.toutiao.com/search?keyword=面粉中含滑石粉？官方抽检结果出炉)
 1. [女子团建时被组员轮流用水淋头](https://so.toutiao.com/search?keyword=女子团建时被组员轮流用水淋头)
 1. [广西一野生景点登山游客密密麻麻](https://so.toutiao.com/search?keyword=广西一野生景点登山游客密密麻麻)
-1. [苏炳添世界排名消失](https://so.toutiao.com/search?keyword=苏炳添世界排名消失)
 1. [消防员为救人智力退至3岁 妻子发声](https://so.toutiao.com/search?keyword=消防员为救人智力退至3岁+妻子发声)
 1. [丰田章男称业界不应全力投入电动车](https://so.toutiao.com/search?keyword=丰田章男称业界不应全力投入电动车)
 1. [拾荒男子PUA上海7旬老太骗得82万](https://so.toutiao.com/search?keyword=拾荒男子PUA上海7旬老太骗得82万)
 1. [张雪峰公司2月放18天假只上7天班](https://so.toutiao.com/search?keyword=张雪峰公司2月放18天假只上7天班)
 1. [法媒震惊中国队赢了面包“世界杯”](https://so.toutiao.com/search?keyword=法媒震惊中国队赢了面包“世界杯”)
-1. [除夕免收通行费以驶离出口时间为准](https://so.toutiao.com/search?keyword=除夕免收通行费以驶离出口时间为准)
 1. [30岁女子一天5杯咖啡喝成脆骨人](https://so.toutiao.com/search?keyword=30岁女子一天5杯咖啡喝成脆骨人)
-1. [烈士陵园树枝掰开竟是五角星图案](https://so.toutiao.com/search?keyword=烈士陵园树枝掰开竟是五角星图案)
 1. [台学生呛赖清德发言遭打断引争议](https://so.toutiao.com/search?keyword=台学生呛赖清德发言遭打断引争议)
 1. [公司回应员工痛哭往他人头上浇水](https://so.toutiao.com/search?keyword=公司回应员工痛哭往他人头上浇水)
-1. [邻桌模仿聋哑人称其哑巴双方起冲突](https://so.toutiao.com/search?keyword=邻桌模仿聋哑人称其哑巴双方起冲突)
 1. [个人养老金账户“空户”难题待解](https://so.toutiao.com/search?keyword=个人养老金账户“空户”难题待解)
 1. [医生：这些人不可摄入大量咖啡](https://so.toutiao.com/search?keyword=医生：这些人不可摄入大量咖啡)
 1. [被狗咬伤女童筹集善款已全部退回](https://so.toutiao.com/search?keyword=被狗咬伤女童筹集善款已全部退回)
 1. [河北一网约车司机驾车撞执法人员](https://so.toutiao.com/search?keyword=河北一网约车司机驾车撞执法人员)
-1. [媒体：勿把饭圈那套带到体育比赛](https://so.toutiao.com/search?keyword=媒体：勿把饭圈那套带到体育比赛)
 1. [美称应分开考虑对以及对乌援助问题](https://so.toutiao.com/search?keyword=美称应分开考虑对以及对乌援助问题)
 1. [极兔李杰：不后悔进入中国市场](https://so.toutiao.com/search?keyword=极兔李杰：不后悔进入中国市场)
 1. [多地已发现“加拿大一枝黄花”](https://so.toutiao.com/search?keyword=多地已发现“加拿大一枝黄花”)
@@ -61,13 +84,11 @@
 1. [台媒体人曝赖清德未处理郑文灿原因](https://so.toutiao.com/search?keyword=台媒体人曝赖清德未处理郑文灿原因)
 1. [媒体谈赖清德支持度一路下跌](https://so.toutiao.com/search?keyword=媒体谈赖清德支持度一路下跌)
 1. [中国男子海外被藏尸冰箱案二审宣判](https://so.toutiao.com/search?keyword=中国男子海外被藏尸冰箱案二审宣判)
-1. [小伙自掏腰包53万帮村里修路](https://so.toutiao.com/search?keyword=小伙自掏腰包53万帮村里修路)
 1. [超80家公司发回购公告](https://so.toutiao.com/search?keyword=超80家公司发回购公告)
 1. [台媒：两岸贸易不好台湾经济不会好](https://so.toutiao.com/search?keyword=台媒：两岸贸易不好台湾经济不会好)
 1. [前三季度居民国内出游花费3.69万亿](https://so.toutiao.com/search?keyword=前三季度居民国内出游花费3.69万亿)
 1. [农行存量房贷利率平均下调73个基点](https://so.toutiao.com/search?keyword=农行存量房贷利率平均下调73个基点)
 1. [华为申请超充绿廊商标](https://so.toutiao.com/search?keyword=华为申请超充绿廊商标)
-1. [曝45岁男子炒股欠贷百万爆仓销户](https://so.toutiao.com/search?keyword=曝45岁男子炒股欠贷百万爆仓销户)
 1. [首次中药配方颗粒省际联盟集采开标](https://so.toutiao.com/search?keyword=首次中药配方颗粒省际联盟集采开标)
 1. [机票燃油附加费回落](https://so.toutiao.com/search?keyword=机票燃油附加费回落)
 1. [iPhone 15提前降价导致销量锐减](https://so.toutiao.com/search?keyword=iPhone+15提前降价导致销量锐减)
@@ -75,7 +96,6 @@
 1. [为什么现在没年味了](https://so.toutiao.com/search?keyword=为什么现在没年味了)
 1. [中专生称被学校强制送去厂里拧螺丝](https://so.toutiao.com/search?keyword=中专生称被学校强制送去厂里拧螺丝)
 1. [李佳琦团队招舆情公关](https://so.toutiao.com/search?keyword=李佳琦团队招舆情公关)
-1. [赖岳谦：美国的停火草案玩文字游戏](https://so.toutiao.com/search?keyword=赖岳谦：美国的停火草案玩文字游戏)
 1. [中方回应是否计划同哈马斯接触](https://so.toutiao.com/search?keyword=中方回应是否计划同哈马斯接触)
 1. [投资10万开蔬菜店赚钱吗](https://so.toutiao.com/search?keyword=投资10万开蔬菜店赚钱吗)
 1. [广州地铁禁止万圣节恐怖妆容](https://so.toutiao.com/search?keyword=广州地铁禁止万圣节恐怖妆容)
@@ -97,6 +117,5 @@
 1. [台媒：解放军无人机“绕台一圈”](https://so.toutiao.com/search?keyword=台媒：解放军无人机“绕台一圈”)
 1. [男子酒后骑三轮车 遇检查调头就跑](https://so.toutiao.com/search?keyword=男子酒后骑三轮车+遇检查调头就跑)
 1. [突发心绞痛硝酸甘油可以站立吞服吗](https://so.toutiao.com/search?keyword=突发心绞痛硝酸甘油可以站立吞服吗)
-1. [11岁男孩玩蛋仔派对10天花掉4万元](https://so.toutiao.com/search?keyword=11岁男孩玩蛋仔派对10天花掉4万元)
 1. [公交上男子站姿怪异乘客暖心救助](https://so.toutiao.com/search?keyword=公交上男子站姿怪异乘客暖心救助)
 <!-- END TOUTIAO -->
